Fixing mobile nav on mobile

--- a/.themes/NewSpring/Styles/overrides/base/_responsive.less
+++ b/.themes/NewSpring/Styles/overrides/base/_responsive.less
@@ -29,8 +29,9 @@
         // width: 100%;
 
         body.navbar-side-open & {
-            left: @sidebar-width;
+            // left: @sidebar-width;
             right: -@sidebar-width;
+            margin-left: 0;
         }
         
         #page-title {
